# projects

./: .env.example  .gitignore  README.md  docker-compose.yml  mqtt.Dockerfile
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css
client/src/components/: IconPicker.tsx  material-icons.ts
client/src/components/daily/: DailyTaskCard.tsx  DailyTaskForm.tsx
client/src/pages/: ProjectDetail.tsx  ProjectList.tsx  TagManager.tsx  TimelineView.tsx
client/src/pages/daily/: DailyAnalytics.tsx  DailyDashboard.tsx  DailySettings.tsx  DailyTaskDetail.tsx  DailyTasks.tsx  Inbox.tsx
client/src/services/: dailyApi.ts
mcp/: MCP_README.md  pyproject.toml
mcp/src/lifeos_mcp/: server.py
mcp/src/task_manager_mcp/: api_client.py  server.py
mcp/src/task_manager_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: Dockerfile  package-lock.json  package.json
server/db/: schema.sql
server/src/: index.ts
server/src/db/: index.ts
server/src/jobs/: rollover.ts
server/src/routes/: projects.ts  tags.ts  tasks.ts  worklogs.ts
server/src/routes/daily/: ai.ts  analytics.ts  categories.ts  schedule.ts  settings.ts  tasks.ts
server/src/services/: dailyLog.ts  homeassistant.ts  mqtt.ts
